# advent-of-code-2025

./: .gitignore  Makefile  README.md  pyproject.toml
advent_of_code_2025/: cli.py
advent_of_code_2025/day_01/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_01/common/: __init__.py
advent_of_code_2025/day_01/part_01/: main.py
advent_of_code_2025/day_01/part_02/: main.py
advent_of_code_2025/day_02/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_02/common/: __init__.py
advent_of_code_2025/day_02/part_01/: main.py
advent_of_code_2025/day_02/part_02/: main.py
advent_of_code_2025/day_03/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_04/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_05/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_06/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_07/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_08/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_09/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_10/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_11/: common.py  part_01.py  part_02.py
advent_of_code_2025/day_12/: common.py  part_01.py
